@@ -51,7 +51,8 @@ public enum Images
 	UNDO(setupImage("/icons/fugue/16x16/icons-shadowless/arrow-curve-180.png")),
 	REDO(setupImage("/icons/fugue/16x16/icons-shadowless/arrow-curve-000-left.png")),
 	FILTER(setupImage("/icons/filter_16x16.png")),
-	EXPAND_ALL(setupImage("/icons/diagona-icons/src/main/resources/diagona/16x16/109.png"));
+	EXPAND_ALL(setupImage("/icons/diagona-icons/src/main/resources/diagona/16x16/109.png")),
+	PENDING(setupImage("/icons/fugue/16x16/icons-shadowless/asterisk.png"));
 
 	private Image iconImage_;
 
