@@ -1,0 +1,14 @@
+package gov.va.legoEdit.model;
+
+import gov.va.legoEdit.model.schemaModel.Concept;
+
+/**
+ * PendingConcept
+ * @author Dan Armbrust 
+ * Copyright 2013
+ * 
+ */
+public class PendingConcept extends Concept
+{
+
+}
