@@ -11,6 +11,8 @@ Lego Editor Change Log
      a regression in the 0.57 release. 
   *  Fixed a bug where the Lego filter could flag an blank concept field as invalid.
   *  Allow pending concepts to have pending concept parents (without logging a warning at startup)
+  *  Fix bug on "View Concept" menu option when the concept in question was a pending concept.  Also allow
+  		viewing of pending concepts, and show GUI indicator on pending concepts.
   *  artf227644 - Add CEM import / viewer tool.
   *  artf227406 - Add support for drools rule processing.
 
